fix footer to avoid scrollbar on pages with less than a page of content

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -128,10 +128,9 @@ div pre {
 
 .footer {
     position: absolute;
-    bottom: 0px;
-    height: 50px;
+    bottom: 35px;
+    height: 35px;
     width: 100%;
-    padding-bottom: 5px;
 }
 
 
